--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">Proyecto</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pref_control_juego_titulo">Control del Juego</string>
+    <string name="pref_control_juego">pref_control_juego</string>
+    <string name="pref_control_juego_nombre">Control de Juego</string>
 
 </resources>
