--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,17 @@
 <resources>
 
     <string name="app_name">Proyecto</string>
+    <!-- Preferencias -->
     <string name="pref_control_juego_titulo">Control del Juego</string>
     <string name="pref_control_juego">pref_control_juego</string>
     <string name="pref_control_juego_nombre">Control de Juego</string>
+    <string name="pref_musica_titulo">Música</string>
+    <string name="pref_musica">pref_musica</string>
+    <string name="pref_musica_summary_on">Música activada</string>
+    <string name="pref_musica_summary_off">Música desactivada</string>
+    <string name="pref_valor_volumen">pref_valor_volumen</string>
+    <string name="pref_valor_volumen_nombre">Nivel de Volumen</string>
+    <string name="pref_control_juego_summary">Método de control del personaje principal</string>
+    <string name="pref_valor_volumen_summary">El volumen actual es de %1$d</string>
 
 </resources>
