Agregasa música de fondo y clase de ajustes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Proyecto</string>
+    <string name="opciones">Opciones</string>
     <!-- Preferencias -->
     <string name="pref_control_juego_titulo">Control del Juego</string>
     <string name="pref_control_juego">pref_control_juego</string>
