--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,9 @@
     <string name="pref_valor_volumen_nombre">Nivel de Volumen</string>
     <string name="pref_control_juego_summary">Método de control del personaje principal</string>
     <string name="pref_valor_volumen_summary">El volumen actual es de %1$d</string>
+
     <string name="title_activity_records">Records</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_opciones">Opciones</string>
+    <string name="title_activity_compras">Compras</string>
 
 </resources>
