--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,23 +22,28 @@
     <string name="pref_valor_volumen_nombre">Nivel de Volumen</string>
     <string name="pref_control_juego_summary">Método de control del personaje principal</string>
     <string name="pref_valor_volumen_summary">El volumen actual es de %1$d</string>
-
+    <string name="pref_acerca_de">Acerca De</string>
+    <!--Titulos Activities-->
     <string name="title_activity_records">Records</string>
     <string name="title_activity_opciones">Opciones</string>
     <string name="title_activity_compras">Compras</string>
-
+    <!--Publicidad-->
     <string name="banner_records_id">ca-app-pub-3760553259632229/9849510194</string>
-
+    <!--Play Games-->
     <string name="app_id">580766643432</string>
     <string name="achievement_jugar_por_primera_vez">CgkI6OmOw_MQEAIQAQ</string>
     <string name="achievement_jugar_5_veces_al_juego">CgkI6OmOw_MQEAIQAg</string>
     <string name="achievement_jugar_10_veces_al_juego">CgkI6OmOw_MQEAIQAw</string>
     <string name="achievement_jugar_20_veces_al_juego">CgkI6OmOw_MQEAIQBA</string>
     <string name="achievement_jugar_50_veces_al_juego">CgkI6OmOw_MQEAIQBQ</string>
+    <string name="achievement_conseguir_2000_puntos">CgkI6OmOw_MQEAIQCA</string>
+    <string name="achievement_conseguir_5000_puntos">CgkI6OmOw_MQEAIQCQ</string>
+    <string name="achievement_conseguir_1000_puntos_con_3_vidas">CgkI6OmOw_MQEAIQCg</string>
+    <string name="achievement_conseguir_3000_puntos_con_3_vidas">CgkI6OmOw_MQEAIQCw</string>
     <string name="leaderboard_marcador">CgkI6OmOw_MQEAIQBg</string>
-    <string name="pref_acerca_de">Acerca De</string>
     <string name="signin_other_error">Fallo al iniciar sesion, pruebe mas tarde</string>
     <string name="signin_failure">No ha sido posible iniciar sesión</string>
     <string name="logros">Logros</string>
     <string name="marcadores">Marcadores</string>
+
 </resources>
